some small changes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>GraphGuesser</title>
+  <title>Title Text</title>
   <style>
     body {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
@@ -37,9 +37,9 @@
   </style>
 </head>
 <body>
-  <h1>GraphGuesser</h1>
-  <p>A tiny function-guessing game. Coming soon.</p>
-  <button>Play (not working yet!)</button>
+  <h1>Graph Guesser</h1>
+  <p>Sample Text</p>
+  <button>Button Text (this button doesn't lead anywhere)</button>
   <div id="calculator" style="width: 600px; height: 400px;"></div>
 </body>
 </html>
