--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 <body>
   <h1>Graph Guesser</h1>
   <p>Sample Text</p>
-  <button>Button Text (this button doesn't lead anywhere)</button>
+  <button>Button to Game</button>
+  <a href="play.html" class="btn-primary">Play the Game</a>
   <div id="calculator" style="width: 600px; height: 400px;"></div>
 </body>
 </html>
