--- a/index.html
+++ b/index.html
@@ -5,36 +5,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Title Text</title>
-  <style>
-    body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: #0b1020;
-      color: #f5f5f5;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-      margin: 0;
-    }
-    h1 {
-      font-size: 3rem;
-      margin-bottom: 0.5rem;
-    }
-    p {
-      max-width: 400px;
-      text-align: center;
-      opacity: 0.9;
-      margin-bottom: 1.5rem;
-    }
-    button {
-      padding: 0.7rem 1.4rem;
-      border-radius: 999px;
-      border: none;
-      font-size: 1rem;
-      cursor: pointer;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <h1>Graph Guesser</h1>
