--- a/play.html
+++ b/play.html
@@ -12,12 +12,12 @@
 <body>
   <div class="page">
     <header class="top-bar">
-      <h1 class="logo">Graph Guesser</h1>
-      <a href="index.html" class="btn-secondary">Home</a>
+      <h1 class="logo">GraphGuesser</h1>
+      <a href="index.html" class="btn-secondary">Back to Home</a>
     </header>
 
-    <main class="content">
-      <div id="calculator" class="calculator"></div>
+    <main class="fullpage">
+      <div id="calculator"></div>
     </main>
   </div>
 
