--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Title Text</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body class="homepage">
   <h1>Graph Guesser</h1>
   <p>Sample Text</p>
   <a href="play.html" class="btn-primary">Play the Game</a>
