--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   <title>Title Text</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body class="homepage">
-  <h1>Graph Guesser</h1>
-  <p>Sample Text</p>
-  <a href="play.html" class="btn-primary">Play the Game</a>
+<body>
+  <div class="center-content">
+    <h1>Graph Guesser</h1>
+    <p>Sample Text</p>
+    <a class="btn-primary" href="play.html">Play the Game</a>
+  </div>
 </body>
 </html>
 
