--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 </head>
 <body>
   <div class="center-content">
-    <h1>Graph Guesser</h1>
-    <p>Sample Text</p>
-    <a class="btn-primary" href="play.html">Play the Game</a>
+    <h1>GraphGuesser</h1>
+    <!-- <p>Sample Text</p> -->
+    <a class="btn-primary" href="play.html">Play</a>
+    <a class="btn-primary" href="howtoplay.html">How To Play</a>
+    <a class="btn-primary" href="dailychallenge.html">Daily Challenge</a>
+    <a class="btn-primary" href="levelcreator.html">Create Level</a>
+    <a class="btn-primary" href="onlinelevels.html">Online Levels</a>
   </div>
 </body>
 </html>
