--- a/play.html
+++ b/play.html
@@ -11,6 +11,45 @@
   <div class="page">
     <header class="top-bar">
       <h1 class="logo">GraphGuesser</h1>
+
+      <nav class="difficulty-nav">
+        <div class="difficulty-group">
+          <span class="difficulty-label">Easy</span>
+          <select id="easy-select" class="difficulty-select">
+            <option value="">Select…</option>
+            <option value="0">Level 1</option>
+            <option value="1">Level 2</option>
+            <option value="2">Level 3</option>
+          </select>
+        </div>
+
+        <div class="difficulty-group">
+          <span class="difficulty-label">Medium</span>
+          <select id="medium-select" class="difficulty-select">
+            <option value="">Select…</option>
+            <option value="0">Level 1</option>
+            <option value="1">Level 2</option>
+          </select>
+        </div>
+
+        <div class="difficulty-group">
+          <span class="difficulty-label">Hard</span>
+          <select id="hard-select" class="difficulty-select">
+            <option value="">Select…</option>
+            <option value="0">Level 1</option>
+            <option value="1">Level 2</option>
+          </select>
+        </div>
+
+        <div class="difficulty-group">
+          <span class="difficulty-label">Impossible</span>
+          <select id="impossible-select" class="difficulty-select">
+            <option value="">Select…</option>
+            <option value="0">Level 1</option>
+          </select>
+        </div>
+        
+      </nav>
       <a href="index.html" class="btn-secondary">Back to Home</a>
     </header>
 
