--- a/play.html
+++ b/play.html
@@ -17,9 +17,12 @@
           <span class="difficulty-label">Easy</span>
           <select id="easy-select" class="difficulty-select">
             <option value="">Select…</option>
-            <option value="0">Level 1</option>
-            <option value="1">Level 2</option>
-            <option value="2">Level 3</option>
+            <option value="0">Bounce</option>
+            <option value="1">Wobbly</option>
+            <option value="2">Jet</option>
+            <option value="3">Smooth</option>
+            <option value="4">Asymptote</option>
+            <option value="5">Slide</option>
           </select>
         </div>
 
@@ -27,8 +30,15 @@
           <span class="difficulty-label">Medium</span>
           <select id="medium-select" class="difficulty-select">
             <option value="">Select…</option>
-            <option value="0">Level 1</option>
-            <option value="1">Level 2</option>
+            <option value="0">Jittery</option>
+            <option value="1">Nonchalant</option>
+            <option value="2">Vertical</option>
+            <option value="3">Ouch</option>
+            <option value="4">Up Down</option>
+            <option value="5">Boring</option>
+            <option value="6">Double Bounce</option>
+            <option value="7">Moire</option>
+            <option value="8">Familiar</option>
           </select>
         </div>
 
@@ -36,8 +46,13 @@
           <span class="difficulty-label">Hard</span>
           <select id="hard-select" class="difficulty-select">
             <option value="">Select…</option>
-            <option value="0">Level 1</option>
-            <option value="1">Level 2</option>
+            <option value="0">Diagonal</option>
+            <option value="1">Bump</option>
+            <option value="2">Checkmark</option>
+            <option value="3">Pits</option>
+            <option value="4">Linear</option>
+            <option value="5">Quadratic</option>
+            <option value="6">Up Up And Away</option>
           </select>
         </div>
 
@@ -45,10 +60,13 @@
           <span class="difficulty-label">Impossible</span>
           <select id="impossible-select" class="difficulty-select">
             <option value="">Select…</option>
-            <option value="0">Level 1</option>
+            <option value="0">Ridiculousness</option>
+            <option value="1">Polite</option>
+            <option value="2">Impolite</option>
+            <option value="3">Downright Rude</option>
           </select>
         </div>
-        
+
       </nav>
       <a href="index.html" class="btn-secondary">Back to Home</a>
     </header>
