implemented level code import and export

--- a/play.html
+++ b/play.html
@@ -67,6 +67,10 @@
           </select>
         </div>
 
+        <div>
+          <button id="import-custom" class="btn-primary">Import</button>
+        </div>
+
       </nav>
       <a href="index.html" class="btn-secondary">Back to Home</a>
     </header>
